share/cascade/test/regression/type_check/fail/issue_45a.v
// parameter can't have a recursive definition

parameter A=A;
